# django_assignment_restaurant_review

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
config/settings/: base.py  local.py  prod.py
restaurants/: models.py  tests.py  urls.py
reviews/: models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
